feat: #1944 Webhook registration API and UI Signed-off-by: Laurent Broudoux <laurent.broudoux@gmail.com>
Signed-off-by: Laurent Broudoux <laurent.broudoux@gmail.com>