@@ -2217,7 +2217,7 @@ class OpenAPIImporterTest {
 
       // Check that operations have been found.
       assertEquals(1, service.getOperations().size());
-      Operation operation = service.getOperations().get(0);
+      Operation operation = service.getOperations().getFirst();
       assertEquals("POST /streams", operation.getName());
       assertEquals("POST", operation.getMethod());
 
@@ -2270,5 +2270,59 @@ class OpenAPIImporterTest {
             fail("Not the expected exchange type");
          }
       }
+   }
+
+   @Test
+   void testOpenAPIWithWebhooks() {
+      OpenAPIImporter importer = null;
+      try {
+         importer = new OpenAPIImporter(
+               "target/test-classes/io/github/microcks/util/openapi/webhook-example-openapi.json", null);
+      } catch (IOException ioe) {
+         fail("Exception should not be thrown");
+      }
+
+      List<Service> services = null;
+      try {
+         services = importer.getServiceDefinitions();
+      } catch (MockRepositoryImportException e) {
+         fail("Exception should not be thrown");
+      }
+
+      // Check that basic service properties are there.
+      assertEquals(1, services.size());
+      Service service = services.get(0);
+      assertEquals("Webhook Example", service.getName());
+      assertEquals(ServiceType.REST, service.getType());
+      assertEquals("1.0.0", service.getVersion());
+
+      // Check that operations have been found.
+      assertEquals(1, service.getOperations().size());
+      Operation operation = service.getOperations().getFirst();
+      assertEquals("newPet webhook", operation.getName());
+      assertEquals("POST", operation.getMethod());
+
+      // Parse messages.
+      List<Exchange> exchanges = null;
+      try {
+         exchanges = importer.getMessageDefinitions(service, operation);
+      } catch (Exception e) {
+         fail("No exception should be thrown when importing message definitions.");
+      }
+      assertEquals(1, exchanges.size());
+
+      // Check exchange.
+      Exchange exchange = exchanges.getFirst();
+      assertTrue(exchange instanceof RequestResponsePair);
+      RequestResponsePair pair = (RequestResponsePair) exchange;
+
+      assertNotNull(pair.getRequest());
+      assertNotNull(pair.getResponse());
+      assertNull(pair.getCallbacks());
+      assertEquals("zaza", pair.getRequest().getName());
+      assertEquals("zaza", pair.getResponse().getName());
+      assertEquals("200", pair.getResponse().getStatus());
+      assertNotNull(pair.getRequest().getContent());
+      assertNull(pair.getResponse().getContent());
    }
 }
